envoy.yaml
static_resources:
  listeners:
  - name: listener_http_10000
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http 
          route_config:
            name: local_route 
            virtual_hosts:
            - name: local_service
              domains: ["*"] 
              routes:
              - match: { prefix: "/" }
                route: { cluster: flask_backend_cluster }
          http_filters:
          - name: envoy.filters.http.ring_buffer_cache 
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ring_buffer_cache.v3.RingBufferCacheConfig
              buffer_size: 5 # Configurable buffer size
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: flask_backend_cluster 
    type: STRICT_DNS 
    connect_timeout: 5s 
    lb_policy: ROUND_ROBIN 
    load_assignment:
      cluster_name: flask_backend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: flask_backend
                port_value: 5000 
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
